src/test/resources/org/shirolang/interpreter/errors/assign_to_internal_port_in_decl.sro
node N begin
    d Double
end

n N(100.0)
